--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -221,10 +221,23 @@
     <Compile Include="Migrations\201902151917125_InitialModel.Designer.cs">
       <DependentUpon>201902151917125_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902152018199_CreateModels.cs" />
+    <Compile Include="Migrations\201902152018199_CreateModels.Designer.cs">
+      <DependentUpon>201902152018199_CreateModels.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902152029530_OverrideConventions.cs" />
+    <Compile Include="Migrations\201902152029530_OverrideConventions.Designer.cs">
+      <DependentUpon>201902152029530_OverrideConventions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Coverage.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Policy.cs" />
+    <Compile Include="Models\Risk.cs" />
+    <Compile Include="Models\UserPolicy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -321,6 +334,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902151917125_InitialModel.resx">
       <DependentUpon>201902151917125_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902152018199_CreateModels.resx">
+      <DependentUpon>201902152018199_CreateModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902152029530_OverrideConventions.resx">
+      <DependentUpon>201902152029530_OverrideConventions.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
