--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -255,51 +255,59 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902151917125_InitialModel.cs" />
-    <Compile Include="Migrations\201902151917125_InitialModel.Designer.cs">
+    <Compile Include="Persistence\EntityConfigurations\CoverageConfiguration.cs" />
+    <Compile Include="Persistence\EntityConfigurations\PolicyConfiguration.cs" />
+    <Compile Include="Persistence\EntityConfigurations\RiskConfiguration.cs" />
+    <Compile Include="Persistence\EntityConfigurations\UserPolicyConfiguration.cs" />
+    <Compile Include="Persistence\Migrations\201902151917125_InitialModel.cs" />
+    <Compile Include="Persistence\Migrations\201902151917125_InitialModel.Designer.cs">
       <DependentUpon>201902151917125_InitialModel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902152018199_CreateModels.cs" />
-    <Compile Include="Migrations\201902152018199_CreateModels.Designer.cs">
+    <Compile Include="Persistence\Migrations\201902152018199_CreateModels.cs" />
+    <Compile Include="Persistence\Migrations\201902152018199_CreateModels.Designer.cs">
       <DependentUpon>201902152018199_CreateModels.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902152029530_OverrideConventions.cs" />
-    <Compile Include="Migrations\201902152029530_OverrideConventions.Designer.cs">
+    <Compile Include="Persistence\Migrations\201902152029530_OverrideConventions.cs" />
+    <Compile Include="Persistence\Migrations\201902152029530_OverrideConventions.Designer.cs">
       <DependentUpon>201902152029530_OverrideConventions.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902152041358_PopulateCoverageTable.cs" />
-    <Compile Include="Migrations\201902152041358_PopulateCoverageTable.Designer.cs">
+    <Compile Include="Persistence\Migrations\201902152041358_PopulateCoverageTable.cs" />
+    <Compile Include="Persistence\Migrations\201902152041358_PopulateCoverageTable.Designer.cs">
       <DependentUpon>201902152041358_PopulateCoverageTable.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902152048490_PopulateRisksTable.cs" />
-    <Compile Include="Migrations\201902152048490_PopulateRisksTable.Designer.cs">
+    <Compile Include="Persistence\Migrations\201902152048490_PopulateRisksTable.cs" />
+    <Compile Include="Persistence\Migrations\201902152048490_PopulateRisksTable.Designer.cs">
       <DependentUpon>201902152048490_PopulateRisksTable.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902160118385_ModifyUserPolicy.cs" />
-    <Compile Include="Migrations\201902160118385_ModifyUserPolicy.Designer.cs">
+    <Compile Include="Persistence\Migrations\201902160118385_ModifyUserPolicy.cs" />
+    <Compile Include="Persistence\Migrations\201902160118385_ModifyUserPolicy.Designer.cs">
       <DependentUpon>201902160118385_ModifyUserPolicy.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountBindingModels.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ApplicationDbContext.cs" />
-    <Compile Include="Models\Coverage.cs" />
-    <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\Policy.cs" />
-    <Compile Include="Models\Risk.cs" />
-    <Compile Include="Models\UserPolicy.cs" />
-    <Compile Include="Persistence\IUnitOfWork.cs" />
+    <Compile Include="Persistence\Migrations\201902162039270_UpdateEntities.cs" />
+    <Compile Include="Persistence\Migrations\201902162039270_UpdateEntities.Designer.cs">
+      <DependentUpon>201902162039270_UpdateEntities.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistence\Migrations\Configuration.cs" />
+    <Compile Include="Core\Models\AccountBindingModels.cs" />
+    <Compile Include="Core\ViewModels\AccountViewModels.cs" />
+    <Compile Include="Persistence\ApplicationDbContext.cs" />
+    <Compile Include="Core\Models\Coverage.cs" />
+    <Compile Include="Core\Models\ApplicationUser.cs" />
+    <Compile Include="Core\Models\Policy.cs" />
+    <Compile Include="Core\Models\Risk.cs" />
+    <Compile Include="Core\Models\UserPolicy.cs" />
+    <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
-    <Compile Include="Repositories\CoverageRepository.cs" />
-    <Compile Include="Repositories\ICoverageRepository.cs" />
-    <Compile Include="Repositories\IPolicyRepository.cs" />
-    <Compile Include="Repositories\IRiskRepository.cs" />
-    <Compile Include="Repositories\IUserPolicyRepository.cs" />
-    <Compile Include="Repositories\PolicyRepository.cs" />
-    <Compile Include="Repositories\RiskRepository.cs" />
-    <Compile Include="Repositories\UserPolicyRepository.cs" />
+    <Compile Include="Persistence\Repositories\CoverageRepository.cs" />
+    <Compile Include="Core\Repositories\ICoverageRepository.cs" />
+    <Compile Include="Core\Repositories\IPolicyRepository.cs" />
+    <Compile Include="Core\Repositories\IRiskRepository.cs" />
+    <Compile Include="Core\Repositories\IUserPolicyRepository.cs" />
+    <Compile Include="Persistence\Repositories\PolicyRepository.cs" />
+    <Compile Include="Persistence\Repositories\RiskRepository.cs" />
+    <Compile Include="Persistence\Repositories\UserPolicyRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -310,7 +318,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -361,18 +369,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Core\Dtos\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
@@ -392,23 +402,26 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902151917125_InitialModel.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902151917125_InitialModel.resx">
       <DependentUpon>201902151917125_InitialModel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902152018199_CreateModels.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902152018199_CreateModels.resx">
       <DependentUpon>201902152018199_CreateModels.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902152029530_OverrideConventions.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902152029530_OverrideConventions.resx">
       <DependentUpon>201902152029530_OverrideConventions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902152041358_PopulateCoverageTable.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902152041358_PopulateCoverageTable.resx">
       <DependentUpon>201902152041358_PopulateCoverageTable.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902152048490_PopulateRisksTable.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902152048490_PopulateRisksTable.resx">
       <DependentUpon>201902152048490_PopulateRisksTable.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902160118385_ModifyUserPolicy.resx">
+    <EmbeddedResource Include="Persistence\Migrations\201902160118385_ModifyUserPolicy.resx">
       <DependentUpon>201902160118385_ModifyUserPolicy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201902162039270_UpdateEntities.resx">
+      <DependentUpon>201902162039270_UpdateEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
