API - CLIENT Login and register code

--- a/Api/Api/Web.config
+++ b/Api/Api/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Api-20190215015238.mdf;Initial Catalog=aspnet-Api-20190215015238;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
@@ -22,6 +23,7 @@
       <remove name="FormsAuthentication" />
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
+
     </modules>
     
   <handlers>
