--- a/Client/package.json
+++ b/Client/package.json
@@ -50,6 +50,8 @@
     "@nebular/security": "3.0.0",
     "@nebular/theme": "3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.3.5",
     "ngx-modal-dialog": "^3.0.0",
     "ngx-modal-dialog-custom": "^3.0.0-custom.1",
     "bootstrap": "4.0.0",
