--- a/Api/Api/packages.config
+++ b/Api/Api/packages.config
@@ -5,6 +5,7 @@
   <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.es" version="6.2.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.6.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
@@ -69,6 +70,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
