--- a/Api/Api/packages.config
+++ b/Api/Api/packages.config
@@ -68,6 +68,8 @@
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
