--- a/Client/package.json
+++ b/Client/package.json
@@ -35,32 +35,32 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.0.3",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/forms": "^7.0.3",
-    "@angular/http": "^7.0.3",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@angular/router": "^7.0.3",
+    "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
+    "@angular/router": "^7.2.7",
     "@nebular/auth": "3.0.0",
     "@nebular/bootstrap": "3.0.0",
     "@nebular/security": "3.0.0",
     "@nebular/theme": "3.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "ng2-completer": "^2.0.8",
-    "ng2-smart-table": "^1.3.5",
-    "ngx-modal-dialog": "^3.0.0",
-    "ngx-modal-dialog-custom": "^3.0.0-custom.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "bootstrap": "4.0.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
-    "eva-icons": "^1.1.0",
+    "eva-icons": "^1.1.1",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "nebular-icons": "1.1.0",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.4.0",
+    "ngx-modal-dialog": "^3.0.0",
+    "ngx-modal-dialog-custom": "^3.0.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
@@ -69,12 +69,12 @@
     "socicon": "3.0.5",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.10.2",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/cli": "^7.0.3",
+    "@angular/cli": "^7.3.4",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "7.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@types/jasmine": "2.5.54",
